--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_screenutil:
   date_picker_timeline:
   sqflite:
+  flutter_staggered_animations:
 
 dev_dependencies:
   flutter_test:
